{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 19,
  "lineage": "b0e85065-1c82-3701-78e7-8dd158599510",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253490797025:internet-gateway/igw-0d610c9b82ce043c3",
            "id": "igw-0d610c9b82ce043c3",
            "owner_id": "253490797025",
            "tags": {
              "Name": "devops-igw"
            },
            "tags_all": {
              "Name": "devops-igw"
            },
            "vpc_id": "vpc-0254c3343dba4a07e"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253490797025:route-table/rtb-0c16d8077ee031110",
            "id": "rtb-0c16d8077ee031110",
            "owner_id": "253490797025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d610c9b82ce043c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-route-table"
            },
            "tags_all": {
              "Name": "devops-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254c3343dba4a07e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d547b3cc4eb88b04",
            "route_table_id": "rtb-0c16d8077ee031110",
            "subnet_id": "subnet-092a984d97ed54126"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_route_table",
            "aws_subnet.devops_subnet",
            "aws_vpc.devops_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a16070830a6562e3",
            "route_table_id": "rtb-0c16d8077ee031110",
            "subnet_id": "subnet-0d97f2e3374a900cc"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_route_table",
            "aws_subnet.devops_subnet",
            "aws_vpc.devops_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae241a7cd67963b4",
            "route_table_id": "rtb-0c16d8077ee031110",
            "subnet_id": "subnet-07075a8a2ff79698b"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_route_table",
            "aws_subnet.devops_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253490797025:security-group/sg-02e6d259aa250d8d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e6d259aa250d8d8",
            "ingress": [],
            "name": "terraform-20250505091808819200000005",
            "name_prefix": "terraform-",
            "owner_id": "253490797025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-cluster-sg"
            },
            "tags_all": {
              "Name": "devops-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254c3343dba4a07e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253490797025:security-group/sg-09a1f5e03bc8420d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a1f5e03bc8420d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250505091808822000000006",
            "name_prefix": "terraform-",
            "owner_id": "253490797025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-node-sg"
            },
            "tags_all": {
              "Name": "devops-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254c3343dba4a07e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253490797025:subnet/subnet-092a984d97ed54126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092a984d97ed54126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490797025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-subnet-0"
            },
            "tags_all": {
              "Name": "devops-subnet-0"
            },
            "vpc_id": "vpc-0254c3343dba4a07e"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253490797025:subnet/subnet-0d97f2e3374a900cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d97f2e3374a900cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490797025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-subnet-1"
            },
            "tags_all": {
              "Name": "devops-subnet-1"
            },
            "vpc_id": "vpc-0254c3343dba4a07e"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253490797025:subnet/subnet-07075a8a2ff79698b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07075a8a2ff79698b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490797025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-subnet-2"
            },
            "tags_all": {
              "Name": "devops-subnet-2"
            },
            "vpc_id": "vpc-0254c3343dba4a07e"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253490797025:vpc/vpc-0254c3343dba4a07e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04807dbb97811a2af",
            "default_route_table_id": "rtb-039ddc90beb7c1940",
            "default_security_group_id": "sg-00a7ecbce74ef0029",
            "dhcp_options_id": "dopt-05ef6ec3eb38b2625",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0254c3343dba4a07e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039ddc90beb7c1940",
            "owner_id": "253490797025",
            "tags": {
              "Name": "devops-vpc"
            },
            "tags_all": {
              "Name": "devops-vpc"
            }
          }
        }
      ]
    }
  ]
}